--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,18 +4,17 @@
   "description": "",
   "main": "./src/api/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^4.3.7",
-    "chai-http": "^4.3.0",
-    "eslint": "^8.38.0",
-    "sinon": "^15.0.3"
+    "axios": "^1.3.5",
+    "eslint": "^8.38.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "eslint-config-trybe-backend": "^2.1.0",
     "express": "^4.18.2",
