--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint-config-trybe-backend": "^2.1.0",
     "express": "^4.18.2",
