--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/api/server.js",
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "reset:db": "env $(cat .env) npx sequelize db:migrate:undo && env $(cat .env) npx sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
