--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./src/api/server.js",
   "scripts": {
+    "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "start": "node .",
     "reset:db": "env $(cat .env) npx sequelize db:migrate:undo && env $(cat .env) npx sequelize db:migrate"
   },
